--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
+      <img src="images/ballon-black.svg" id="ballon">
+      <img src="images/cloud-1.svg" id="cloud1">
+      <img src="images/cloud-2.svg" id="cloud2">
+      <img src="images/cloud-3.svg" id="cloud3">
       <div id="headerblock">
-        <h1 id="headline">Personinfo!</h1>
+        <h1 id="headline">Personregistret!</h1>
       </div>
       <div id="menu">
           <button id="add" class="menuButton">Lägg till</button>
@@ -18,23 +22,107 @@
       </div>
       <div id="main">
         <div id="addView">
-          <h2 id="addText">Skriv in namn och personnummer och tryck på lägg till</h2>
-        <input type="text" id="nameInput" class="inputFields" placeholder="Namn"><br>
-        <input type="text" id="ssnInput" class="inputFields" placeholder="Personnummer"><br>
-        <button id="addButton" disabled>Lägg till</button>
+          <h2 id="addText">Fyll i och välj tryck på "Lägg till"</h2>
+            <input type="text" id="nameInput" class="inputFields" placeholder="Namn"><br>
+            <input type="text" id="ssnInput" class="inputFields" placeholder="Personnummer"><br>
+            <div class="radioButtons">
+              <input type="radio" id="genderMale" name="gender" checked>Man
+              <input type="radio" id="genderFemale" name="gender">Kvinna
+              <input type="radio" id="genderOther" name="gender">Annan<br>
+            </div>
+            <button id="addButton" disabled>Lägg till</button>
         </div>
         <div id="listView" style="display: none">
           <h2 id="listText">Alla personer som är inlagda i systemet</h2>
-          <table id="personList">
+          <table id="personTable">
             <tr> 
               <th>Namn</th>
               <th>Personnummer</th>
               <th>Ålder</th>
+              <th>Kön</th>
             </tr>
           </table>
         </div>
         <div id="aboutView" style="display: none">
-          <button>Test about</button>
+          <p>Personregistret hjälper dig hålla reda på personer. <br>
+            Du kan lägga till och ta bort personer. <br>
+            Hemsidan är väldigt lättförstådd och jag behöver nog <br>
+            inte förklara hur man använder alla funktioner.<br>
+            Den här texten är till för att demonstrera att <br>
+            jag har lagt till en parralax-effekt till sidan.<br>
+            Så för att demonstrera detta så kommer texten till <br>
+            Bohemian rapsody av Queen.<br><br>
+            Is this the real life?<br>
+            Is this just fantasy?<br>
+            Caught in a landslide,<br>
+            No escape from reality.<br><br>
+
+            Open your eyes,<br>
+            Look up to the skies and see,<br>
+            I'm just a poor boy, I need no sympathy,<br>
+            Because I'm easy come, easy go,<br>
+            Little high, little low,<br>
+            Any way the wind blows doesn't really matter to me, to me.<br><br>
+
+            Mama, just killed a man,<br>
+            Put a gun against his head,<br>
+            Pulled my trigger, now he's dead.<br>
+            Mama, life had just begun,<br>
+            But now I've gone and thrown it all away.<br><br>
+
+            Mama, ooh,<br>
+            Didn't mean to make you cry,<br>
+            If I'm not back again this time tomorrow,<br>
+            Carry on, carry on as if nothing really matters.<br><br>
+
+            Too late, my time has come,<br>
+            Sends shivers down my spine,<br>
+            Body's aching all the time.<br>
+            Goodbye, everybody, I've got to go,<br>
+            Gotta leave you all behind and face the truth.<br><br>
+
+            Mama, ooh (any way the wind blows),<br>
+            I don't wanna die,<br>
+            I sometimes wish I'd never been born at all.<br><br>
+
+            I see a little silhouetto of a man,<br>
+            Scaramouche, Scaramouche, will you do the Fandango?<br>
+            Thunderbolt and lightning,<br>
+            Very, very frightening me.<br>
+            (Galileo) Galileo.<br>
+            (Galileo) Galileo,<br>
+            Galileo Figaro<br>
+            Magnifico-o-o-o-o.<br><br>
+
+            I'm just a poor boy, nobody loves me.<br>
+            He's just a poor boy from a poor family,<br>
+            Spare him his life from this monstrosity.<br><br>
+
+            Easy come, easy go, will you let me go?<br>
+            Bismillah! No, we will not let you go. (Let him go!)<br>
+            Bismillah! We will not let you go. (Let him go!)<br>
+            Bismillah! We will not let you go. (Let me go!)<br>
+            Will not let you go. (Let me go!)<br>
+            Never, never let you go<br>
+            Never let me go, oh.<br>
+            No, no, no, no, no, no, no.<br>
+            Oh, mama mia, mama mia (Mama mia, let me go.)<br>
+            Beelzebub has a devil put aside for me, for me, for me.<br><br>
+
+            So you think you can stone me and spit in my eye?<br>
+            So you think you can love me and leave me to die?<br>
+            Oh, baby, can't do this to me, baby,<br>
+            Just gotta get out, just gotta get right outta here.<br><br>
+
+            (Ooooh, ooh yeah, ooh yeah)<br><br>
+
+            Nothing really matters,<br>
+            Anyone can see,<br>
+            Nothing really matters,<br>
+            Nothing really matters to me.<br><br>
+
+            Any way the wind blows. 
+          </p>
         </div>
       </div>
   </body>
